--- a/index.html
+++ b/index.html
@@ -3,26 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2048</title>
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>SPACE 2048</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
 <body>
+
+    <div id="background"></div>
+    <div id="midground"></div>
+    <div id="foreground"></div> 
+
+    <audio id="audio" loop>
+        <source src="./music/space_background.mp3">
+    </audio>
+
+
+<!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- <a href="#" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a> -->
+
+            <!-- Modal content-->
+            <div class="modal-content">
+
+                <div class="flex-center">
+                    <a href="https://github.com/guw005/Space2048" class="fa fa-github fa-4x icon-3d"></a>
+                    <a href="https://www.linkedin.com/in/guanyao-wang-a45326b6/" class="fa fa-linkedin fa-4x icon-3d"></a>
+                </div>
+
+
+                <div class="intro">
+                    <p>Hello! My name is Guanyao Wang, creater of this SPACE 2048 project. </p>
+                    <p>User your arrow keys to move the tiles. When two tiles with the same number touch, they merge into one! Have fun!</p>
+
+                    <div class="extra-intro">
+                        <p>BTW, check out GitHub page and my LinkedIn by clicking the icons at the top!</p>
+                    </div>
+                </div>
+ 
+                <!-- <div class="modal-header"> -->
+                    <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+                    <!-- <h3 class="modal-title">Instruction</h3> -->
+                <!-- </div> -->
+                <!-- <div class="modal-body"> -->
+                    <!-- <h4>HOW TO PLAY: </h4> -->
+                    <!-- <p>Use your arrow keys to move the tiles. When two tiles with the same number touch, they merge into one!</p> -->
+                <!-- </div> -->
+
+                <!-- <div class="modal-body"> -->
+                    <!-- <p>Hello! My name is Guanyao Wang. I'm the creater of SPACE 2048. Good luck and have fun! Checkout GitHub for this project</p> -->
+                <!-- </div> -->
+                <!-- <div class="modal-footer"> -->
+                    <div class="play-close">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="playMusic()">Play</button>
+                    </div>
+                <!-- </div> -->
+            </div>
+
+        </div>
+    </div>
+
     <header>
         <span class="title">2048</span>
-        <div id="score-container">
-            <div>
-                score:<span id="score"></span>
-            </div>
-            <div id="btn">
-                    <a href="javascript:startGame();" id="startgame">
-                        NEW GAME
-                    </a>
-            </div>
-        </div>
     </header>
+
+
+            <div id="score-container">
+                <div>
+                    score:<span id="score"></span>
+                </div>
+                <div id="btn">
+                        <a href="javascript:startGame();" id="startgame">
+                            NEW GAME
+                        </a>
+                </div>
+                <div id="btn">
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="instruction">
+                        <span>INFO</span>
+                    </button>
+                </div>
+    
+                <div id="btn" onclick="controlMusic()">
+                    <!-- <span >MUSIC: </span> -->
+                    <div id="music">
+                        MUSIC:<span id="audio-status"></span>
+                    </div>
+                </div>
+            </div>
     
     <div id="grid">
         <div class="grid-cell" id="grid-cell-0-0"></div>
