get rid of folders

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="foreground"></div> 
 
     <audio id="audio" loop>
-        <source src="./music/space_background.mp3">
+        <source src="./space_background.mp3">
     </audio>
 
 
